- The change in 7.2.0 to output ~AssumedElectricHeater~ for main heating system in buildings that ended up using the assumed electric heater incorrectly reported ~AssumedElectricHeater~ if /any/ heat was provided this way, rather than main heating. This has been fixed.
*** Version 7.2.0
**** Bugs Fixed
- The default inputs used for the =ref.health-impact-of= command were not sensible, and no defaults were supplied for some values.
  - The default for =temperature-after= is now =house.sit= rather than =(original house.sit)=.
  - The default for =temperature-before= is now =(original house.sit)=; before there was no default
  - The default for =permeability-after= is now =house.permeabililty= instead of =(original house.permeability)=.
  - The default for =permeability-before= is now =(original house.permeability)=; before there was no default
  - The default before and after for whether the house have trickle vents or fans is now taken from the =ref.original= and current value of  =ref.house.number-air-change-devices= appropriately.

- The hot water heating efficiency penalty associated with lack of a boiler interlock was not being applied in for cases where the summer and winter efficiency for the boiler are equal.
  
  This has a small impact on energy use (mean average of a 1.7% increase) in a small number of affected cases (about 350 cases in the 2014 stock):

  #+CAPTION: Weighted histogram of percentage change in SAP2012 total energy use due to correct application of boiler interlock penalty in all cases.
  [[./figures/interlock-sap.png]]

- In SAP mode, the model now uses SAP table S8B for party-wall u-values instead of SAP table 3.6.
  It also takes S8B to indicate that party walls for flats have a u-value of zero in all cases.
  Both these decisions follow direction from the BRE.

  The effect of this is as follows:

  - Masonry cavity party walls in flats now have a u-value of zero.
    Previously, insulated cavity party walls would have a u-value of 0.5.